# devlake-dashboards

./: README.md  devlake-dev-env  docker-compose-devlake-dev.yml  docker-compose.yml  grafana.ini  guidelines.md  pytest.ini
.github/workflows/: docker-image.yml
adrs/: Building from library Panels.md
dashboard-testing/: docker-compose.yml  pyproject.toml
dashboard-testing/docker/: build-image.sh  schema.sql
dashboard-testing/framework/: dashboard.py  pandas_sqlalchemy.py
dashboard-testing/models/: base.py
dashboard-testing/tests/: conftest.py  test_dashboard.py  test_dummy.py
dashboard-testing/tests/fixtures/: sample_dashboard.json
dashboard_testing/docker/: Dockerfile  entrypoint.sh  mysql-init.sh
dashboard_testing/framework/: dashboard.py  db.py  pandas_sqlalchemy.py
dashboard_testing/models/: __init__.py  domain.py
dashboard_testing/tests/: __init__.py  conftest.py  test_dashboard.py  test_template.py
grafana/: Dockerfile
grafana/dashboards/: Homepage.json
grafana/dashboards/2. Polaris Open Source/: PRCodeReviewAnalysis.json  PRCycleTimeAnalysis.json  PRLeadTimeForChanges.json  finite_window_analysis.json  randomized_prs.json
grafana/dashboards/Code Flow/: PRCycleTimeAnalysis.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/tests/: conftest.py  dashboard_common_test.py  test_pr_lead_time_for_changes.py
