[tool.poetry]
name = "grafana-dashboard-tests"
version = "0.1.0"
description = "Test framework for validating Grafana dashboards"
authors = ["Krishna Kumar <kkumar@exathink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.0"
sqlalchemy = "^2.0.23"  # Replaces mysql-connector-python
pymysql = "^1.1.0"  # Required MySQL driver for SQLAlchemy
pyyaml = "^6.0"  # For reading test config
requests = "^2.31.0"
pandas = "^2.1.3"
cryptography = "^41.0"
jsonpath-ng = "1.7.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"  # For formatting
flake8 = "^6.0.0"  # Linting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
